2008-07-02  Yvan Vanhullebus  <vanhu@netasq.com>
	Track:266, from Timo Teras <timo.teras@iki.fi>:
	* src/racoon/isakmp_inf.c: fixed some %d to %zu (size_t values)

2008-06-18  Matthew Grooms
	From Timo Teras <timo.teras@iki.fi>:
	* src/racoon/grabmyaddr.c
	  src/racoon/ipsec_doi.c
	  src/racoon/isakmp.c
	  src/racoon/isakmp_cfg.c
	  src/racoon/isakmp_inf.c
	  src/racoon/remoteconf.c
	  src/racoon/admin.c : network port value manipulation cleanup

2008-04-25  Yvan Vanhullebus  <vanhu@netasq.com>
	Track:4, from Timo Teras:
	* src/racoon/isakmp_inf.c: extract ports information from
	SADB_X_EXT_NAT_T_[SD]PORT if present in purge_ipsec_spi()

2008-03-06  Yvan Vanhullebus  <vanhu@netasq.com>
	* src/racoon/oakley.c: Generates a log if cert validation has been
	  disabled by configuration.

2008-03-05  Matthew Grooms
	* src/racoon/cfparse.y: properly initialize the unity network struct

2008-03-05  Matthew Grooms
	From Timo Teras <timo.teras@iki.fi>:
	* src/racoon/pfkey.c: better handling for pfkey socket read errors

2008-02-25  Emmanuel Dreyfus <manu@netbsd.org>
        From Brian Haley <brian.haley@hp.com>
	* src/racoon/ipsec_doi.c: Do check SPI size (it was not due to a typo)

2008-02-22  Emmanuel Dreyfus <manu@netbsd.org>
	From Brian Haley <brian.haley@hp.com>
	* src/racoon/isakmp.c: Fix address length

2008-01-11  Yvan Vanhullebus  <vanhu@netasq.com>
	* src/racoon/handler.[ch]: added an 'established' arg to getph1byaddr()
	From Krzysztof Oledzki <olel@ans.pl>:
	* src/racoon/isakmp.c: Only search for established ph1 handles in
	  DPD (also reported new getph1byaddr() arg)
	* src/racoon/isakmp_inf.c: added some details to some logs (also
	  reported new getph1byaddr() arg) 
	* src/racoon/crypto_openssl.c: fixed compilation with idea and
	  recent gcc
	From Timo Teras <timo.teras@iki.fi>:
	* src/racoon/isakmp_inf.c: reset iph1->dpd_r_u in the scheduler's
	  callback, to avoid some access to freed memory

2007-11-29  Yvan Vanhullebus  <vanhu@netasq.com>